bynkc/tests/fixtures/positive/251_multi_file_commons_test/src/thing/widget.bynk
commons thing {
  type Widget = Int where NonNegative
}
