bynkc/tests/fixtures/negative/05_empty_refinement/input.bynk
commons demo {
  type Bad = Int where Positive && InRange(-10, -1)
}
